tests/res/resolution/error_name_collision_say.say
// A trait collides with a same-scope variable, too.
trait Foo { pub fn f() { return 1; } }
say Foo = 1; // error: 'Foo' already declared in this scope
